--- a/src/components/CarSelected/CarSelected.css
+++ b/src/components/CarSelected/CarSelected.css
@@ -46,6 +46,7 @@
   width: 350px;
   font-size: 20px;
   color: #fffcf2;
+  font-weight: 200;
   margin-bottom: 10px;
   margin-left: 20px;
 }
@@ -60,7 +61,7 @@
   background-color: #EB5E28;
   border-radius: 25px;
   text-align: center;
-  padding: 5px 20px;
+  padding: 5px 10px 0px 10px;
 }
 
 .car-selected #car-background img {
@@ -140,8 +141,7 @@
   }
 
   .car-selected #car-background {
-    width: 100%;
-    max-width: 100%;
+    display: none;
   }
 
   .car-selected #car-background img {
@@ -161,6 +161,9 @@
     flex-direction: column;
     align-items: center;
     width: 92%;
+    margin-top: -40px;
+    border: #252422 2px solid;
+    box-shadow: inset 0 0 0 1px #252422;
   }
 
   .car-selected .car-info {
@@ -173,15 +176,15 @@
     max-width: 100%;
   }
 
-  .car-selected #car-background img {
-    margin: 0 0 0 0;
-  }
-
   .car-selected .next-button {
     width: 90%;
     padding: 10px;
     margin: 0 0 10px 0;
     align-self: center;
+  }
+
+  .car-selected .car-details{
+    margin-top: 20px;
   }
 }
 
