--- a/src/components/RentalPage/RentalPage.css
+++ b/src/components/RentalPage/RentalPage.css
@@ -52,7 +52,7 @@
 }
 
 .rental-page .filter-button {
-  background-color: #FFFCF2;
+  background-color: #ffffff;
 }
 
 .filter-button {
